# kusyllabus

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: SKILL.md  api-schema.md
har/: all_www.k.kyoto-u.ac.jp.har  search_en_www.k.kyoto-u.ac.jp.har  search_www.k.kyoto-u.ac.jp.har
html/: 京都大学教務情報システム.html
html/京都大学教務情報システム_files/: behavior.css  jquery_auto.js.ダウンロード  la_style.css  layout.css  prototype.js.ダウンロード  webfont.css
src/kusyllabus/: __init__.py  client.py  conditions.py  encoding.py  enums.py  exceptions.py  models.py
src/kusyllabus/cli/: __init__.py  __main__.py  _common.py  _context.py  _deliver.py  _errors.py  _feedback.py  _jobs.py  _paths.py  _profile.py
src/kusyllabus/cli/commands/: __init__.py  agent.py  all_.py  feedback.py  jobs.py  master.py  profile.py  search.py  syllabus.py  titles.py
src/kusyllabus/parsers/: __init__.py  _util.py  all_tree.py  search.py  syllabus.py  titles.py
tests/: conftest.py
tests/fixtures/: all.html  department_syllabus_sample.html  dept_multi_course_number.html  la_61585.html  la_62409.html  la_63736.html  la_63736_en.html  search_en_p1.html  search_mixed_links.html  search_wed1.html  titles_dept1.html  titles_dept80.html  top_en.html  top_ja.html
tests/integration/: test_cli.py  test_client_async.py  test_client_sync.py
tests/live/: test_live_endpoints.py
tests/unit/: test_conditions.py  test_encoding.py  test_enums.py  test_models.py  test_parsers.py
