[project]
name = "kusyllabus"
version = "0.2.1"
description = "Async/sync client library for the Kyoto University open syllabus (k.kyoto-u.ac.jp/external/open_syllabus)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "kyoto-university",
    "syllabus",
    "cli",
    "agent-native-cli",
    "api-client",
    "shift-jis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Education",
    "Typing :: Typed",
]
dependencies = [
    "aiometer>=1.0.0",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "selectolax>=0.4.9",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/youseiushida/kusyllabus"
Repository = "https://github.com/youseiushida/kusyllabus"
Issues = "https://github.com/youseiushida/kusyllabus/issues"
Documentation = "https://github.com/youseiushida/kusyllabus#readme"
Changelog = "https://github.com/youseiushida/kusyllabus/releases"

[project.scripts]
kusyllabus = "kusyllabus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kusyllabus"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
# Live tests hit the real server and are opted into via `-m live`.
addopts = "-ra -m 'not live'"
markers = [
    "live: tests that hit the real Kyoto University open syllabus server",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
    "ASYNC",         # async best practices
    "PIE",           # misc anti-patterns
    "PYI",           # type stub conventions
]
ignore = [
    "E501",      # long lines: rich help text and JP labels are wide on purpose
    "B008",      # function call in default arg (typer pattern: typer.Option(...))
    "B904",      # raise ... from err is noise on simple wrappers
    "B028",      # missing stacklevel on warnings, not relevant here
    "RUF001",    # full-width chars in strings are intentional Japanese content
    "RUF002",    # same, but inside docstrings
    "RUF003",    # same, but inside comments
    "ASYNC230",  # one-shot blocking `open()` for JSONL output is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]   # assert False is fine in tests
"src/kusyllabus/enums.py" = ["E501"]  # large literal tables

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
